--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AI Chatbot</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>XKING Animated AI</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="chat-container">
-    <h2>AI Chatbot</h2>
-    <div id="chat-box"></div>
+<div class="app">
+  <div class="header">
+    <h2>XKING AI</h2>
+    <p>Owned & Built by <b>THE GREAT XKING</b></p>
+  </div>
 
-    <div class="input-area">
-        <input id="user-input" type="text" placeholder="Type your message..." />
-        <button onclick="sendMessage()">Send</button>
+  <div class="stage">
+    <!-- AVATAR -->
+    <div id="avatar">
+      <div class="head"></div>
+      <div class="body"></div>
+      <div class="hand left"></div>
+      <div class="hand right"></div>
     </div>
+
+    <!-- TEXT OUTPUT -->
+    <div id="text-box">I am alive. Ask me anything.</div>
+  </div>
+
+  <div class="input-area">
+    <input id="userInput" placeholder="Type your question..." />
+    <button onclick="ask()">Ask</button>
+  </div>
 </div>
 
 <script src="script.js"></script>
